Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3035,17 +3035,26 @@ input, select, textarea {
 
 		/* Basic */
 
-			body, input, select, textarea {
-				font-size: 12pt;
-			}
+		body, input, select, textarea {
+			font-size: 12pt;
+		}
+
+		.work-item .image {
+			max-width: 300px; /* Set a maximum width */
+		}
+
+		.work-item .image img {
+			width: 100%;
+			height: 100%;
+		}
 
 		/* Keep connect-me section in the footer */
-			.header-connect {
-				display: none;
-			}
-			.footer-connect {
-				display: block;
-			}
+		.header-connect {
+			display: none;
+		}
+		.footer-connect {
+			display: block;
+		}
 	}
 
 /* Large */
